all shift functions now working, copying cleaned up

--- a/sentidict/templates/template-full.html.jinja2
+++ b/sentidict/templates/template-full.html.jinja2
@@ -20,7 +20,7 @@
 
 <div id="footer"></div>
 
-<script src="static/d3.js" charset="utf-8"></script>
+<script src="static/d3.v3.js" charset="utf-8"></script>
 <script src="static/jquery-1.11.0.min.js" charset="utf-8"></script>
 <script src="static/urllib.js" charset="utf-8"></script>
 <script src="static/hedotools.init.js" charset="utf-8"></script>
