--- a/sentidict/templates/wrapper.html.jinja2
+++ b/sentidict/templates/wrapper.html.jinja2
@@ -2,7 +2,7 @@
 <head>
 <title>Simple Shift Plot</title>
 <link href="static/hedotools.shift.css" rel="stylesheet">
-<script src="static/d3.js" charset="utf-8"></script>
+<script src="static/d3.v3.js" charset="utf-8"></script>
 <script src="static/jquery-1.11.0.min.js" charset="utf-8"></script>
 <script src="static/urllib.js" charset="utf-8"></script>
 <script src="static/hedotools.init.js" charset="utf-8"></script>
