--- a/sentidict/templates/js-includes.j2
+++ b/sentidict/templates/js-includes.j2
@@ -1,7 +1,5 @@
-{% include "static/d3.v3.js" %}
-{% include "static/jquery-1.11.0.min.js" %}
-{% include "static/urllib.js" %}
-{% include "static/hedotools.init.js" %}
-{% include "static/hedotools.shifter.js" %}
+{% include "static/d3.min.js" %}
+{% include "static/jquery.min.js" %}
+{% include "static/hedotools.min.js" %}
 
 
