--- a/sentidict/templates/wordshift-base.html
+++ b/sentidict/templates/wordshift-base.html
@@ -2,13 +2,14 @@
   <head>
     <title>Simple Shift Plot</title>
     {% if link %}
+    {# let the browser go fetch #}
     <link href="static/hedotools.shift.css" rel="stylesheet">
-    <script src="static/d3.v3.js" charset="utf-8"></script>
-    <script src="static/jquery-1.11.0.min.js" charset="utf-8"></script>
-    <script src="static/urllib.js" charset="utf-8"></script>
-    <script src="static/hedotools.init.js" charset="utf-8"></script>
-    <script src="static/hedotools.shifter.js" charset="utf-8"></script>
+    <script src="static/d3.min.js" charset="utf-8"></script>
+    <script src="static/jquery.min.js" charset="utf-8"></script>
+    <script src="static/hedotools.min.js" charset="utf-8"></script>
     {% else %}
+    {# dump the files straight in! #}
+    {# no option here for using require, because we don't need to use it#}
     <style type="text/css">
       {% include "static/hedotools.shift.css" %}
     </style>
@@ -19,6 +20,7 @@
   </head>
   <body>
     {% block body %}
+    {# the meat of the page #}
     {% include "templates/wordshift-body.html" %}
 
     {% block bodyjs %}
